--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | RescueOne</title>
     <style>
+        * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             font-family: Arial, sans-serif;
             background-color: #f3f4f6;
-            margin: 0;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
@@ -22,6 +22,9 @@
             background-color: #1d4ed8;
             color: white;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            position: sticky;
+            top: 0;
+            z-index: 100;
         }
         nav .container {
             display: flex;
@@ -37,8 +40,6 @@
             list-style: none;
             display: flex;
             gap: 24px;
-            margin: 0;
-            padding: 0;
         }
         nav a {
             color: white;
@@ -51,6 +52,11 @@
         nav a.active {
             font-weight: bold;
         }
+        .nav-toggle {
+            display: none;
+            font-size: 24px;
+            cursor: pointer;
+        }
         main {
             flex-grow: 1;
             padding: 32px 0;
@@ -59,12 +65,12 @@
             font-size: 28px;
             color: #1f2937;
             text-align: center;
-            margin-bottom: 32px;
+            margin-bottom: 24px;
         }
         .contact-container {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 32px;
+            gap: 24px;
             max-width: 800px;
             margin: 0 auto;
         }
@@ -75,7 +81,7 @@
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
         .form-group {
-            margin-bottom: 24px;
+            margin-bottom: 16px;
         }
         label {
             display: block;
@@ -89,20 +95,18 @@
         }
         input, textarea {
             width: 100%;
-            padding: 8px 12px;
+            padding: 8px;
             border: 1px solid #d1d5db;
             border-radius: 6px;
             font-size: 16px;
-            transition: border-color 0.3s, box-shadow 0.3s;
         }
         input:focus, textarea:focus {
             outline: none;
             border-color: #4f46e5;
-            box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.2);
         }
         textarea {
             resize: vertical;
-            min-height: 100px;
+            min-height: 80px;
         }
         button {
             width: 100%;
@@ -113,7 +117,6 @@
             border-radius: 6px;
             font-size: 16px;
             cursor: pointer;
-            transition: background-color 0.3s;
         }
         button:hover {
             background-color: #1e40af;
@@ -124,13 +127,12 @@
         .info-section h2 {
             font-size: 20px;
             color: #1f2937;
-            margin-bottom: 16px;
+            margin-bottom: 12px;
         }
         .info-section p {
             color: #4b5563;
             font-size: 14px;
-            line-height: 1.6;
-            margin-bottom: 12px;
+            margin-bottom: 8px;
         }
         footer {
             background-color: #1f2937;
@@ -140,11 +142,11 @@
         footer .container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 32px;
+            gap: 24px;
         }
         footer h3 {
             font-size: 18px;
-            margin-bottom: 16px;
+            margin-bottom: 12px;
         }
         footer p, footer li {
             color: #d1d5db;
@@ -153,14 +155,12 @@
         footer a {
             color: #d1d5db;
             text-decoration: none;
-            transition: color 0.3s;
         }
         footer a:hover {
             color: white;
         }
         footer ul {
             list-style: none;
-            padding: 0;
             display: flex;
             flex-direction: column;
             gap: 8px;
@@ -172,14 +172,27 @@
         }
         .copyright {
             border-top: 1px solid #374151;
-            margin-top: 32px;
-            padding-top: 24px;
+            margin-top: 24px;
+            padding-top: 16px;
             text-align: center;
             color: #9ca3af;
         }
         @media (max-width: 768px) {
             nav ul {
                 display: none;
+                flex-direction: column;
+                position: absolute;
+                top: 64px;
+                left: 0;
+                width: 100%;
+                background-color: #1d4ed8;
+                padding: 16px;
+            }
+            nav ul.active {
+                display: flex;
+            }
+            .nav-toggle {
+                display: block;
             }
             .contact-container {
                 grid-template-columns: 1fr;
@@ -191,36 +204,34 @@
     </style>
 </head>
 <body>
-    <!-- Navbar -->
     <nav>
         <div class="container">
             <div class="logo">RescueOne</div>
+            <span class="nav-toggle" onclick="document.querySelector('nav ul').classList.toggle('active')">&#9776;</span>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="report_incident.html">Report Incident</a></li>
-                <li><a href="volunteer_registration.html">Volunteer</a></li>
-                <li><a href="donation.html">Donate</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
-                <li><a href="ngo_dashboard.html">NGO Dashboard</a></li>
-                <li><a href="admin_reports.html">Admin Reports</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./report_incident.html">Report Incident</a></li>
+                <li><a href="./volunteer_registration.html">Volunteer</a></li>
+                <li><a href="./donation.html">Donate</a></li>
+                <li><a href="./contact.html" class="active">Contact</a></li>
+                <li><a href="./ngo_dashboard.html">NGO Dashboard</a></li>
+                <li><a href="./admin_reports.html">Admin Reports</a></li>
             </ul>
         </div>
     </nav>
-
-    <!-- Main Content -->
     <main>
         <h1>Contact Us</h1>
         <div class="contact-container">
             <section class="form-section">
-                <form action="#" method="post">
+                <form action="#">
                     <div class="form-group">
                         <label for="name">Name <span class="required">*</span></label>
-                        <input type="text" id="name" name="name" required aria-required="true" placeholder="Enter your name">
+                        <input type="text" id="name" name="name" required placeholder="Enter your name">
                     </div>
                     <div class="form-group">
                         <label for="email">Email <span class="required">*</span></label>
-                        <input type="email" id="email" name="email" required aria-required="true" placeholder="Enter your email">
+                        <input type="email" id="email" name="email" required placeholder="Enter your email">
                     </div>
                     <div class="form-group">
                         <label for="subject">Subject</label>
@@ -228,7 +239,7 @@
                     </div>
                     <div class="form-group">
                         <label for="message">Message <span class="required">*</span></label>
-                        <textarea id="message" name="message" required aria-required="true" placeholder="Enter your message"></textarea>
+                        <textarea id="message" name="message" required placeholder="Enter your message"></textarea>
                     </div>
                     <button type="submit">Send Message</button>
                 </form>
@@ -237,37 +248,34 @@
                 <h2>Get in Touch</h2>
                 <p><strong>Email:</strong> contact@rescueone.org</p>
                 <p><strong>Phone:</strong> +1 (555) 123-4567</p>
-                <p><strong>Address:</strong> 123 Disaster Way, Relief City 98765</p>
-                <p>We’re here to answer your questions and support disaster relief efforts. Reach out anytime!</p>
+                <p><strong>Address:</strong> 123 Disaster Way, Relief City</p>
+                <p>We’re here to support disaster relief efforts. Reach out anytime!</p>
             </section>
         </div>
     </main>
-
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div>
                 <h3>RescueOne</h3>
-                <p>Connecting disaster victims with NGOs and emergency services to facilitate efficient relief efforts.</p>
+                <p>Connecting disaster victims with NGOs and emergency services.</p>
             </div>
-           /visuals
             <div>
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="report_incident.html">Report Incident</a></li>
-                    <li><a href="volunteer_registration.html">Volunteer</a></li>
-                    <li><a href="donation.html">Donate</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./report_incident.html">Report Incident</a></li>
+                    <li><a href="./volunteer_registration.html">Volunteer</a></li>
+                    <li><a href="./donation.html">Donate</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
             <div>
                 <h3>Contact Us</h3>
                 <ul class="contact">
-                    <li><span>Email: contact@rescueone.org</span></li>
-                    <li><span>Phone: +1 (555) 123-4567</span></li>
-                    <li><span>Address: 123 Disaster Way, Relief City 98765</span></li>
+                    <li>Email: contact@rescueone.org</li>
+                    <li>Phone: +1 (555) 123-4567</li>
+                    <li>Address: 123 Disaster Way, Relief City</li>
                 </ul>
             </div>
         </div>
