--- a/volunteer_registration.html
+++ b/volunteer_registration.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About | RescueOne</title>
+    <title>Volunteer Registration | RescueOne</title>
     <style>
+        * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             font-family: Arial, sans-serif;
             background-color: #f3f4f6;
-            margin: 0;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
@@ -22,6 +22,9 @@
             background-color: #1d4ed8;
             color: white;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            position: sticky;
+            top: 0;
+            z-index: 100;
         }
         nav .container {
             display: flex;
@@ -37,8 +40,6 @@
             list-style: none;
             display: flex;
             gap: 24px;
-            margin: 0;
-            padding: 0;
         }
         nav a {
             color: white;
@@ -51,124 +52,83 @@
         nav a.active {
             font-weight: bold;
         }
+        .nav-toggle {
+            display: none;
+            font-size: 24px;
+            cursor: pointer;
+        }
         main {
             flex-grow: 1;
             padding: 32px 0;
         }
-        .about-main {
-            max-width: 1000px;
-            margin: 0 auto;
-        }
-        .mission-section {
-            background-color: #1d4ed8;
-            color: white;
-            padding: 48px 32px;
-            border-radius: 8px;
-            margin-bottom: 48px;
+        h1 {
+            font-size: 28px;
+            color: #1f2937;
             text-align: center;
+            margin-bottom: 24px;
         }
-        .mission-section h1 {
-            font-size: 32px;
+        .form-container {
+            max-width: 600px;
+            margin: 0 auto;
+            background-color: white;
+            padding: 24px;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+        .form-group {
             margin-bottom: 16px;
         }
-        .mission-section p {
-            max-width: 800px;
-            margin: 0 auto;
-            font-size: 18px;
-            line-height: 1.8;
-            color: #e5e7eb;
-        }
-        .team-section h2,
-        .testimonials h2 {
-            font-size: 24px;
-            color: #1f2937;
-            text-align: center;
-            margin-bottom: 32px;
-        }
-        .team-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 32px;
-            margin-bottom: 64px;
-        }
-        .team-card {
-            background-color: white;
-            border-radius: 8px;
-            padding: 24px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-        .team-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
-        }
-        .card-image {
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
-            margin: 0 auto 16px;
-            background-color: #e5e7eb;
-            position: relative;
-        }
-        .card-image::before {
-            content: "Photo";
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: #6b7280;
+        label {
+            display: block;
             font-size: 14px;
-        }
-        .team-card h3 {
-            font-size: 20px;
-            color: #1f2937;
-            margin-bottom: 8px;
-        }
-        .role {
-            color: #3b82f6;
-            font-weight: bold;
-            margin-bottom: 12px;
-        }
-        .bio {
-            color: #4b5563;
-            line-height: 1.6;
-            font-size: 14px;
-        }
-        .testimonial-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 32px;
-            margin-bottom: 64px;
-        }
-        blockquote {
-            background-color: white;
-            padding: 24px;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            position: relative;
-        }
-        blockquote::before {
-            content: "\201C";
-            font-size: 48px;
-            color: #3b82f6;
-            position: absolute;
-            left: 16px;
-            top: 0;
-            line-height: 1;
-        }
-        blockquote p {
-            font-size: 16px;
-            line-height: 1.7;
-            padding-left: 48px;
             color: #374151;
-        }
-        blockquote footer {
-            text-align: right;
+            margin-bottom: 8px;
             font-weight: bold;
-            color: #1f2937;
-            margin-top: 16px;
-            padding-right: 16px;
+        }
+        label .required {
+            color: #dc2626;
+        }
+        input, select, textarea {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #d1d5db;
+            border-radius: 6px;
+            font-size: 16px;
+        }
+        input:focus, select:focus, textarea:focus {
+            outline: none;
+            border-color: #4f46e5;
+        }
+        textarea {
+            resize: vertical;
+            min-height: 80px;
+        }
+        .checkbox-group {
+            display: flex;
+            gap: 16px;
+            flex-wrap: wrap;
+        }
+        .checkbox-group label {
+            font-weight: normal;
+            display: flex;
+            align-items: center;
+        }
+        .checkbox-group input {
+            width: auto;
+            margin-right: 8px;
+        }
+        button {
+            width: 100%;
+            background-color: #1d4ed8;
+            color: white;
+            padding: 12px;
+            border: none;
+            border-radius: 6px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #1e40af;
         }
         footer {
             background-color: #1f2937;
@@ -178,11 +138,11 @@
         footer .container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 32px;
+            gap: 24px;
         }
         footer h3 {
             font-size: 18px;
-            margin-bottom: 16px;
+            margin-bottom: 12px;
         }
         footer p, footer li {
             color: #d1d5db;
@@ -191,14 +151,12 @@
         footer a {
             color: #d1d5db;
             text-decoration: none;
-            transition: color 0.3s;
         }
         footer a:hover {
             color: white;
         }
         footer ul {
             list-style: none;
-            padding: 0;
             display: flex;
             flex-direction: column;
             gap: 8px;
@@ -210,113 +168,120 @@
         }
         .copyright {
             border-top: 1px solid #374151;
-            margin-top: 32px;
-            padding-top: 24px;
+            margin-top: 24px;
+            padding-top: 16px;
             text-align: center;
             color: #9ca3af;
         }
         @media (max-width: 768px) {
             nav ul {
                 display: none;
+                flex-direction: column;
+                position: absolute;
+                top: 64px;
+                left: 0;
+                width: 100%;
+                background-color: #1d4ed8;
+                padding: 16px;
             }
-            .mission-section {
-                padding: 32px 16px;
+            nav ul.active {
+                display: flex;
             }
-            .mission-section h1 {
-                font-size: 28px;
+            .nav-toggle {
+                display: block;
             }
-            .mission-section p {
-                font-size: 16px;
+            .form-container {
+                padding: 16px;
             }
         }
     </style>
 </head>
 <body>
-    <!-- Navbar -->
     <nav>
         <div class="container">
             <div class="logo">RescueOne</div>
+            <span class="nav-toggle" onclick="document.querySelector('nav ul').classList.toggle('active')">&#9776;</span>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html" class="active">About</a></li>
-                <li><a href="report_incident.html">Report Incident</a></li>
-                <li><a href="volunteer_registration.html">Volunteer</a></li>
-                <li><a href="donation.html">Donate</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="ngo_dashboard.html">NGO Dashboard</a></li>
-                <li><a href="admin_reports.html">Admin Reports</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./report_incident.html">Report Incident</a></li>
+                <li><a href="./volunteer_registration.html" class="active">Volunteer</a></li>
+                <li><a href="./donation.html">Donate</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./ngo_dashboard.html">NGO Dashboard</a></li>
+                <li><a href="./admin_reports.html">Admin Reports</a></li>
             </ul>
         </div>
     </nav>
-
-    <!-- Main Content -->
-    <main class="about-main">
-        <section class="mission-section" aria-labelledby="mission-heading">
-            <h1 id="mission-heading">Our Mission</h1>
-            <p>RescueOne connects volunteers and NGOs with disaster-affected communities to save lives and mitigate the impacts of natural calamities. Our platform streamlines coordination between relief organizations, volunteers, and donors to ensure efficient disaster response.</p>
-        </section>
-        <section class="team-section" aria-labelledby="team-heading">
-            <h2 id="team-heading">Our Team</h2>
-            <div class="team-grid">
-                <article class="team-card" aria-labelledby="team1">
-                    <div class="card-image" role="img" aria-label="Photo of Sarah Johnson"></div>
-                    <h3 id="team1">Sarah Johnson</h3>
-                    <p class="role">Founder & CEO</p>
-                    <p class="bio">10+ years in disaster management, former UN disaster response coordinator.</p>
-                </article>
-                <article class="team-card" aria-labelledby="team2">
-                    <div class="card-image" role="img" aria-label="Photo of Michael Chen"></div>
-                    <h3 id="team2">Michael Chen</h3>
-                    <p class="role">Technology Director</p>
-                    <p class="bio">Software engineer specializing in crisis mapping and real-time coordination systems.</p>
-                </article>
-                <article class="team-card" aria-labelledby="team3">
-                    <div class="card-image" role="img" aria-label="Photo of Priya Patel"></div>
-                    <h3 id="team3">Priya Patel</h3>
-                    <p class="role">Partnership Manager</p>
-                    <p class="bio">Connects RescueOne with NGOs and government agencies worldwide.</p>
-                </article>
-            </div>
-        </section>
-        <section class="testimonials" aria-labelledby="testimonials-heading">
-            <h2 id="testimonials-heading">What People Say About Us</h2>
-            <div class="testimonial-grid">
-                <blockquote>
-                    <p>"RescueOne streamlined our relief efforts during the 2023 floods, helping us reach 40% more affected families."</p>
-                    <footer>— Red Crescent Society</footer>
-                </blockquote>
-                <blockquote>
-                    <p>"As a volunteer, I was able to find meaningful opportunities within 24 hours of signing up."</p>
-                    <footer>— David M., Rescue Volunteer</footer>
-                </blockquote>
-            </div>
-        </section>
+    <main>
+        <h1>Volunteer Registration</h1>
+        <div class="form-container">
+            <form action="#">
+                <div class="form-group">
+                    <label for="name">Full Name <span class="required">*</span></label>
+                    <input type="text" id="name" name="name" required placeholder="Enter your name">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email <span class="required">*</span></label>
+                    <input type="email" id="email" name="email" required placeholder="Enter your email">
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone Number <span class="required">*</span></label>
+                    <input type="tel" id="phone" name="phone" required placeholder="Enter your phone">
+                </div>
+                <div class="form-group">
+                    <label for="location">Location <span class="required">*</span></label>
+                    <input type="text" id="location" name="location" required placeholder="Enter your city">
+                </div>
+                <div class="form-group">
+                    <label for="availability">Availability <span class="required">*</span></label>
+                    <select id="availability" name="availability" required>
+                        <option value="">Select availability</option>
+                        <option value="full-time">Full-time</option>
+                        <option value="part-time">Part-time</option>
+                        <option value="weekends">Weekends</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label>Skills <span class="required">*</span></label>
+                    <div class="checkbox-group">
+                        <label><input type="checkbox" name="skills" value="medical"> Medical</label>
+                        <label><input type="checkbox" name="skills" value="logistics"> Logistics</label>
+                        <label><input type="checkbox" name="skills" value="communication"> Communication</label>
+                        <label><input type="checkbox" name="skills" value="construction"> Construction</label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="experience">Previous Experience</label>
+                    <textarea id="experience" name="experience" placeholder="Describe experience"></textarea>
+                </div>
+                <button type="submit">Register</button>
+            </form>
+        </div>
     </main>
-
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div>
                 <h3>RescueOne</h3>
-                <p>Connecting disaster victims with NGOs and emergency services to facilitate efficient relief efforts.</p>
+                <p>Connecting disaster victims with NGOs and emergency services.</p>
             </div>
             <div>
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="report_incident.html">Report Incident</a></li>
-                    <li><a href="volunteer_registration.html">Volunteer</a></li>
-                    <li><a href="donation.html">Donate</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./report_incident.html">Report Incident</a></li>
+                    <li><a href="./volunteer_registration.html">Volunteer</a></li>
+                    <li><a href="./donation.html">Donate</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
             <div>
                 <h3>Contact Us</h3>
                 <ul class="contact">
-                    <li><span>Email: contact@rescueone.org</span></li>
-                    <li><span>Phone: +1 (555) 123-4567</span></li>
-                    <li><span>Address: 123 Disaster Way, Relief City 98765</span></li>
+                    <li>Email: contact@rescueone.org</li>
+                    <li>Phone: +1 (555) 123-4567</li>
+                    <li>Address: 123 Disaster Way, Relief City</li>
                 </ul>
             </div>
         </div>
